[package]
name        = "mde-files"
description = "Mackes Desktop Environment (MDE) Files — mesh-first \"Artifact Manager\" file manager, forked from pop-os/cosmic-files."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-files"
path = "src/main.rs"

[dependencies]
iced       = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "svg", "tokio", "advanced"] }
mackes-theme = { path = "../mackes-theme" }
# CR-4 (2026-05-25) — Object Card consumer. Pulls `object_card` from
# the shared widget crate that CR-3.b introduced; the data form +
# spec constants come from mde-theme (no toolkit dep there).
mde-theme  = { path = "../mde-theme", features = ["iced"] }
mde-iced-components = { path = "../mde-iced-components" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# v2.0.0 Phase 2.x — Backend trait + DemoBackend audit-log
# timestamps (chrono UTC millis).
chrono     = "0.4"
# Phase 2.3 — DBusBackend opt-in deps. Behind the `dbus` feature so
# the headless crate (DemoBackend only) keeps a minimal dep graph.
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
zbus       = { version = "5", default-features = false, features = ["tokio"], optional = true }

[features]
# `wayland` (default): enables smithay-client-toolkit portal calls
# once that dep lands. `x11`: stubs those calls; plain std::fs reads.
# `dbus` is in default since v4.0.1 AF-* (2026-05-23) so the
# production binary talks to mackesd's Fleet.Files surface for
# real mesh content — without dbus the Artifact Manager would
# only ever show local files + empty peers list.
default = ["wayland", "dbus"]
wayland = []
x11     = []
dbus    = ["dep:tokio", "dep:zbus"]

[lints.rust]
unsafe_code     = "forbid"
unused_must_use = "deny"
# Allow `missing_docs` on the scaffold — every module gets a one-line
# header doc but inner items (per-view widgets, demo-data fields) are
# self-documenting from the design spec.
missing_docs    = "allow"

[lints.clippy]
# The crate models the prototype data verbatim. The prototype's
# struct layouts deliberately use short field names like `addr` and
# trip several pedantic lints; we silence them as a unit since the
# names are the contract, not a hygiene problem.
pedantic                  = { level = "allow", priority = -1 }
nursery                   = { level = "allow", priority = -1 }
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
unwrap_used               = "warn"
panic                     = "warn"
todo                      = "warn"
