[package]
name        = "mde-iced-components"
description = "Shared Iced widget builders for MDE — the canonical Object Card renderer + future shared widget primitives. Lives outside mde-theme so the latter's no-toolkit-dep lock stays intact, and outside mde-workbench so peer crates (mde-files, mde-popover, mde-music, etc.) can consume the same renderer without taking a heavyweight workbench dep. See CR-3.b in docs/PROJECT_WORKLIST.md for the extraction history."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_iced_components"
path = "src/lib.rs"

[dependencies]
# Match the workbench's iced feature set so call sites here +
# call sites there get the same widget surface area.
iced       = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "svg", "tokio", "advanced", "canvas"] }
mde-theme  = { path = "../mde-theme", features = ["iced"] }
# SWAY-1 (2026-05-28) — canonical motion primitives. Re-exported +
# wrapped by the `motion` module (src/lib.rs) as the ANIM-1..13 access
# point so every animated surface resolves to the locked grid + curves.
mde-motion = { path = "../mde-motion" }

[lints]
workspace = true
