[package]
name         = "mde-kdc-host"
version      = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish      = false
description  = "Host layer for the MDE KDE Connect stack: event stream, pairing store, and (later) the LAN transport, atop mde-kdc-proto."

[lints]
workspace = true

[dependencies]
mde-kdc-proto = { path = "../mde-kdc-proto" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
thiserror     = "1"
# Object-safe async traits (Transport / Connection) on stable rust 1.85.
async-trait   = "0.1"
# The event stream is an mpsc channel; the LAN discovery loop adds a UDP socket
# (`net`), re-announce/prune timers (`time`), and `select!` (`macros`). The
# Surface (iced) already runs tokio, so the host never owns the runtime.
tokio         = { version = "1", features = ["sync", "net", "time", "macros"] }
# The protocol crate intentionally ships NO RSA keygen (ring 0.17 lacks it), so
# the host owns key generation with the pure-Rust `rsa` crate and feeds the
# PKCS#8 bytes back into mde_kdc_proto::crypto::PairingKeyPair::from_pkcs8.
rsa           = "0.9"
rand          = "0.8"

[dev-dependencies]
tokio         = { version = "1", features = ["sync", "net", "time", "macros", "rt"] }
tempfile      = "3"
