[package]
name        = "mde-kdc-proto"
version     = "0.0.0"
edition     = "2021"
publish     = false
description = "KDC2-2 — greenfield Rust KDE Connect protocol library. Pure pure-library: zero D-Bus, zero filesystem, zero networking. Implementations of those layers live in mde-kdc (host integration, KDC2-3). Wire-compatible with the upstream KDE Connect protocol so stock Android/iOS clients pair without modification. Capability-negotiation header on every handshake unlocks MDE-only features for two-MDE-peer pairs with graceful fallback."

[lints]
workspace = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# (none yet — libFuzzer corpus + loopback-test harness land in
# KDC2-2.2 and KDC2-2.3 respectively.)
