[package]
name        = "mde-kdc"
description = "Mackes Desktop Environment (MDE) — re-export facade over mackes-kdc during the v2.0.0 back-compat window."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_kdc"
path = "src/lib.rs"

[dependencies]
mackes-kdc = { path = "../mackes-kdc" }

[lints]
workspace = true
