[package]
name        = "mde-motion"
description = "Canonical motion primitives for MDE's Iced layer-shell surfaces — the four-value timing grid, Material ease-out/ease-in curves, an interruptible eased-redirect tween (no spring/overshoot), capped list-stagger, and a reduced-motion gate. Pure Rust (no toolkit dep) so it unit-tests headless; consumed by mde-iced-components (and through it by every animated surface). The unblock for the ANIM-1..13 worklist epic — see docs/design/sway-native-shell.md §2 + data/css/motion-vocabulary.css."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_motion"
path = "src/lib.rs"

[lints]
workspace = true
