[package]
name        = "mde-music"
description = "AIR-* (v6.1) — the native Airsonic music GUI for MDE (Iced). AIR-10/11 slice: the 7-card library hub + the breadcrumb navigation shell + the Airsonic connection banner. The live grids behind each card + playback transport land with the mde-musicd D-Bus data path (AIR-10.b / AIR-2)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-music"
path = "src/main.rs"

[lib]
name = "mde_music"
path = "src/lib.rs"

[dependencies]
iced       = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "tokio", "advanced"] }
# The credential loader (shared with the daemon) — the hub banner reads
# the configured server.
mde-musicd = { path = "../mde-musicd" }
# AIR-10.b — the GUI talks to the mde-musicd daemon over the Bus
# (action/music/<verb> → reply) per the Q96 Bus-canonical lock.
mde-bus    = { path = "../mde-bus" }
# AIR-10.b — parse the daemon's JSON Bus replies into display rows.
serde_json = "1"
# AIR-10.b — the Bus round-trip runs in spawn_blocking (Persist/rusqlite
# isn't Send, so it can't cross Iced's multi-thread Task executor).
tokio      = { version = "1", features = ["rt", "rt-multi-thread"] }

[lints]
workspace = true
