[package]
name        = "mde-portal"
description = "MDE Portal — unified shell (Dock + Portal-compact + Portal-full + Lock + Theater + Mesh-wallpaper). v6.0 replacement for start_menu, mde-files, mde-workbench, and swaylock theming."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[[bin]]
name = "mde-portal"
path = "src/main.rs"

# Portal-16 — Portal-full scratchpad surface (regular Iced window, not layer-shell).
[[bin]]
name = "mde-portal-full"
path = "src/portal_full_main.rs"

# Portal-35 — `mde://` URI dispatcher. Registered as the
# `x-scheme-handler/mde` handler so `xdg-open mde://...` routes
# through `dev.mackes.MDE.Portal.OpenUri` on the running portal.
[[bin]]
name = "mde-open"
path = "src/mde_open_main.rs"

[dependencies]
# v6.0 Portal-1 — same Iced + layer-shell pair as mde-panel + mde-popover.
# `svg` for Carbon icon rendering; `image` for app thumbnails (Portal-7 Aero-peek).
iced            = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "svg", "image", "tokio", "advanced"] }
iced_layershell = "0.13.7"

# v6.0 Portal-1 — swayipc-async for sway IPC: workspace tree (Portal-5),
# window focus events (Portal-8), output-add/remove events (Portal-2).
# Permanent — sway is the compositor. SWAY-9.b (2026-05-29) retired the
# v6.5 hyprland-rs migration that would have replaced this (Hyprland was
# reversed 2026-05-28; sway-native shell is the locked direction).
swayipc-async = "3.0.0"

# v6.0 Portal-1 — D-Bus surface: dev.mackes.MDE.Portal
# {Goto, Focus, Lock, ToggleDND}. Same zbus 5 + tokio feature set as
# mde-session / mde-workbench.
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Async runtime — shared with Iced + zbus + swayipc-async.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "time"] }

# Portal-5: StreamExt for swayipc EventStream iteration.
futures-util = "0.3"

# Portal-5: async generator stream for workspace subscription.
# async-stream is already in the workspace dep tree (via swayipc-async).
async-stream = "0.3"

# Portal-11: clock segment formatting.
chrono = { version = "0.4", features = [] }

# Serialization for shell-state snapshot (Portal-29) and activity cards.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Portal-50 (R12-Q11, 2026-05-27) — tag-store read/write for the
# prompt-on-change layout banner's ✓ click handler. mackes-mesh-types
# ships the universal `Tag` schema + `TagStore` atomic-write helpers.
mackes-mesh-types = { path = "../mackes-mesh-types" }

# CLI parsing — `mde-portal [--dock | --compact | --full | --lock | --theater | --wallpaper]`
clap = { version = "4.5", features = ["derive"] }

# Ergonomic error propagation (matches mackesd / mde-session pattern).
anyhow = "1"

# XDG home + cache + state paths (matches mde-session / mde-panel / mackesd).
dirs = "5"

# Structured logging — journald reads JSON spans from stderr when the
# user unit's StandardError=journal.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Design-token consumer — derives charcoal/off-white palette from
# mde_theme::Palette without hardcoding hex literals.
mde-theme = { path = "../mde-theme", features = ["iced", "serde"] }

# Portal-31 — universal cards subsystem. Startup hook scans the
# on-disk store and logs a summary so the runtime confirms the
# crate is wired (no scaffold-only modules per §0.12).
mde-card = { path = "../mde-card" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tempfile = "3"

[features]
# `wayland` (default): SCTK + iced_layershell surfaces.
# `x11`: renders as a regular Iced window (dev fallback).
default = ["wayland"]
wayland = []
x11     = []

[lints.rust]
unsafe_code     = "forbid"
unused_must_use = "deny"
missing_docs    = "allow"

[lints.clippy]
pedantic                = { level = "allow", priority = -1 }
nursery                 = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
unwrap_used             = "warn"
panic                   = "warn"
todo                    = "warn"
