[package]
# Note: this crate is named `mde-theme-alias` (directory name) so
# it doesn't collide with the existing `mackes-theme` crate's
# eventual rename to `mde-theme` at v2.0.0 cut. The lib name
# `mde_theme` is the importable identifier.
name        = "mde-theme-alias"
description = "Mackes Desktop Environment (MDE) — re-export facade over mackes-theme during the v2.0.0 back-compat window. Drops at cut; the existing crate renames to mde-theme then."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_theme"
path = "src/lib.rs"

[dependencies]
mackes-theme = { path = "../mackes-theme" }

[lints]
workspace = true
