[workspace]
resolver = "2"
members  = ["crates/mde-kdc-proto", "crates/mde-kdc-host"]

[workspace.package]
edition      = "2021"
rust-version = "1.85"
license      = "GPL-3.0-or-later"
repository   = "https://github.com/matthewmackes/MDE-KDECnt-Rust"
authors      = ["Matthew Mackes <matthewmackes@gmail.com>"]

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[profile.release]
opt-level = "z"
lto       = true
strip     = true
