[package]
name        = "mde-applet-api"
description = "Shared `Applet` trait + state types for every MDE panel applet (Phase E1.1)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_applet_api"
path = "src/lib.rs"

[dependencies]
# Iced — Wayland-only UI toolkit (matches the workbench + mde-files
# stack so the workspace dep tree stays one resolution).
iced       = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "tokio", "advanced"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
