[package]
name        = "mde-applet-audio"
description = "Top-bar-right audio status chip — pactl-backed default-sink volume + mute glyph"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "mde_applet_audio"
path = "src/lib.rs"

[[bin]]
name = "mde-applet-audio"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mde-applet-api = { path = "../applet-api" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
